[package]
name = "minix"
license = "MIT"
version = "0.1.3"
edition = "2021"
author = ["kremilly"]
keywords = ["rust", "javascript", "css", "minify", "compression"]
description = "A straightforward minifier for JavaScript and CSS files, developed using Rust. This tool efficiently reduces the size of JS and CSS files by removing unnecessary characters, whitespace, and comments without affecting functionality."
repository = "https://github.com/kremilly/Minix"
documentation = "https://docs.rs/minix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
regex = "1.4"
figlet-rs = "0.1.3"
clap = { version = "4.4.8", features = ["cargo", "derive"] }